--- a/src/main.css
+++ b/src/main.css
@@ -12,9 +12,6 @@
   text-align: center;
 }
 
-.submitInputForm {
-  width: 600px;
-  padding: 10px 0;
+#submitInputForm {
   margin: 10px 0 0 0;
-  border-radius: 10px;
 }
